# FlyingJoyride

./: .gitignore  Achievement.cpp  Achievement.h  Block.cpp  Block.h  BlockFactory.cpp  BlockFactory.h  CMakeCache.txt  CMakeLists.txt  Character.cpp  Character.h  DisplayElement.h  Enemy.cpp  Enemy.h  EnemyFactory.cpp  EnemyFactory.h  FlyJoyride  FlyJoyride.cbp  FlyingEnemy.cpp  FlyingEnemy.h  Game.cpp  Game.h  Makefile  Map.cpp  Map.h  NormalBlock.cpp  NormalBlock.h  Observer.h  PowerUpBlock.cpp  PowerUpBlock.h  ShootingEnemy.cpp  ShootingEnemy.h  SimpleBlockFactory.cpp  SimpleBlockFactory.h  Subject.h  Window.cpp  Window.h  achievements.txt  cmake_install.cmake  editor.xml  (+5 more)
Test/: CMakeLists.txt  CharacterFixture.cpp  GameFixture.cpp  Makefile  NormalBlockFixture.cpp  PowerUpBlockFixture.cpp  WindowFixture.cpp  cmake_install.cmake  runAllTests  runAllTests.cpp
Test/lib/googletest/: Makefile  cmake_install.cmake  gtest.cbp
colors/: _@user_Twilight.icls
